Fix layout jump effect on toggle backdrop

--- a/css/main.css
+++ b/css/main.css
@@ -25,10 +25,6 @@ ul {
   display: block;
 }
 
-body.modal-open {
-  overflow: hidden;
-}
-
 .no-scroll {
   overflow: hidden;
 }
@@ -889,13 +885,14 @@ body.modal-open {
   position: fixed;
   top: 0;
   left: 0;
+  z-index: 2;
   width: 100%;
   height: 100%;
-  z-index: 100;
   padding: 40px 15px;
   background-color: rgba(0, 0, 0, 0.2);
   opacity: 1;
   visibility: visible;
+  z-index: 100;
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
   overflow-y: scroll;
 }
