--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -26,9 +26,9 @@ ul {
   display: block;
 }
 
-body.modal-open {
-  overflow: hidden;
-}
+// body.modal-open {
+//   overflow: hidden;
+// }
 
 .no-scroll {
   overflow: hidden;
