--- a/sass/component/_backdrop.scss
+++ b/sass/component/_backdrop.scss
@@ -2,14 +2,15 @@
   position: fixed;
   top: 0;
   left: 0;
+  z-index: 2;
   width: 100%;
   height: 100%;
-  z-index: 100;
   padding: 40px 15px;
   background-color: $box-shadow3;
 
   opacity: 1;
   visibility: visible;
+  z-index: 100;
   transition: opacity $animation-time $animation-function,
     visibility $animation-time $animation-function;
   overflow-y: scroll;
